--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #8fbc8f;
 }
 
 .heading {
   text-align: center;
-  color: grey;
+  color: #dcdcdc;
 }
 
 .votes {
@@ -18,17 +19,20 @@
 .tree-card {
   background-color: #dcdcdc;
   width: 17rem;
-  height: 29rem;
+  height: 26rem;
   border-radius: 1rem;
   margin: 1rem;
 }
 
 .tree-item {
   text-align: center;
+  background-color: #dcdcdc;
 }
 
 .tree-item h1 {
   padding-top: 0.5rem;
+  font-size: 1.5rem;
+  background-color: #dcdcdc;
 }
 
 .tree-item img {
@@ -38,7 +42,8 @@
 }
 
 .tree-item p {
-  font-size: 1.25rem;
+  font-size: 1rem;
+  background-color: #dcdcdc;
 }
 
 .modal {
@@ -55,13 +60,23 @@
 
 .modal img {
   max-width: 80%;
-  max-height: 80vh;
+  max-height: 70vh;
+  object-fit: contain;
   margin: auto;
 }
 
 button {
   border-radius: 0.25rem;
   margin: 0.05rem;
+  background-color: #dcdcdc;
+}
+
+button:hover {
+  background-color: #8fbc8f;
+}
+
+.likeButton {
+  background-color: #dcdcdc;
 }
 
 .monkey-button {
@@ -74,8 +89,17 @@ button {
   font-size: 3rem;
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   .card-container {
     flex-direction: column;
+  }
+} */
+
+@media (max-width: 1100px) {
+  .card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
